--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
   "prefer-stable": true,
   "require": {
     "php": "^7.2",
-    "symfony/finder": "^4",
-    "symfony/console": "^4"
+    "symfony/finder": "^4|^5",
+    "symfony/console": "^4|^5"
   },
   "require-dev": {
     "phpunit/phpunit": "^8",
     "everon/coding-standard": "^1",
-    "symfony/var-dumper": "^4"
+    "symfony/var-dumper": "^4|^5"
   },
   "autoload": {
     "psr-4": {
@@ -28,10 +28,7 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\App\\": "tests/App/",
-      "Tests\\Popo\\": "tests/Popo/",
-      "Tests\\Buzz\\": "tests/fixtures/bundles/buzz/src/Buzz/",
-      "Tests\\Foo\\": "tests/fixtures/bundles/foo/src/Foo/",
-      "Tests\\FooBar\\": "tests/fixtures/bundles/foo-bar/src/FooBar/"
+      "Tests\\Popo\\": "tests/Popo/"
     }
   },
   "scripts": {
