readme, dist, typecast

--- a/.popo.dist
+++ b/.popo.dist
@@ -5,7 +5,7 @@ template = vendor/popo/generator/templates/
 output = src/YourProject/Popo/
 namespace = YourProject\Popo
 extension = .php
-; abstract = false|true
+; abstract = 0|1
 
 [dto]
 schema = dto
@@ -13,4 +13,4 @@ template = vendor/popo/generator/templates/
 output = src/YourProject/Popo/
 namespace = YourProject\Popo
 extension = .php
-; abstract = false|true
+; abstract = 0|1
