made sure popo object wont reference each other, cleanups, cs

--- a/composer.json
+++ b/composer.json
@@ -34,15 +34,16 @@
     }
   },
   "scripts": {
-    "popo": "bin/popo generate -sc=1 -scb=1 -sp=1 -c tests/fixtures/.popo",
-    "popo-readme": "bin/popo generate -sc=1 -scb=1 -sp=1 -c tests/fixtures/.popo-readme",
+    "popo": [
+      "bin/popo generate -sc=1 -scb=1 -sp=1 -c tests/fixtures/.popo",
+      "bin/popo generate -sc=1 -scb=1 -sp=1 -c tests/fixtures/.popo-readme"
+    ],
     "post-autoload-dump": [
       "chmod +x bin/popo",
       "vendor/bin/cs-setup"
     ],
     "tests": [
       "@popo",
-      "@popo-readme",
       "vendor/bin/phpunit --testdox"
     ],
     "testsVerbose": "@tests -v"
