--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": "^7.4",
+    "php": "^8",
     "ext-json": "*",
     "ext-ctype": "*",
     "symfony/finder": "^5",
@@ -19,7 +19,6 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8",
-    "everon/coding-standard": "^1",
     "symfony/var-dumper": "^5"
   },
   "autoload": {
@@ -40,8 +39,7 @@
       "bin/popo generate -sc=1 -scb=1 -sp=1 -c tests/fixtures/.popo-readme"
     ],
     "post-autoload-dump": [
-      "chmod +x bin/popo",
-      "vendor/bin/cs-setup"
+      "chmod +x bin/popo"
     ],
     "tests": [
       "@popo",
