--- a/tests/fixtures/bundle/example-bar/bar.popo.yml
+++ b/tests/fixtures/bundle/example-bar/bar.popo.yml
@@ -12,10 +12,8 @@ Example:
     default:
       title: Lorem Ipsum
       buzz: \App\Example\Bundle\Fizz\Buzz::class
-      itemType: \App\Example\Bundle\Fizz\Buzz::class
-      buzzCollection: []
     property: [
       {name: title}
       {name: buzz, type: popo}
-      {name: buzzCollection, type: array, itemName: buzz}
+      {name: buzzCollection, type: array, itemType: \App\Example\Bundle\Fizz\Buzz::class, itemName: buzz}
     ]}}
