--- a/tests/fixtures/popo.yml
+++ b/tests/fixtures/popo.yml
@@ -18,6 +18,7 @@ Example:
       {name: title},
       {name: value, type: int, default: \App\ExampleInterface::TEST_BUZZ},
       {name: bar, type: popo},
+      {name: test, type: mixed},
     ]}}
 
   Bar:
