--- a/tests/fixtures/popo-namespace-root.yml
+++ b/tests/fixtures/popo-namespace-root.yml
@@ -8,7 +8,7 @@ Example:
     property: [
       {name: title},
       {name: bar, type: popo, default: Bar::class},
-      {name: flag, type: bool, default: false},
+      {name: shouldExecute, type: bool, default: false},
     ]}}
 
   Bar:
