--- a/tests/fixtures/bundles/example-foo/foo.popo.yml
+++ b/tests/fixtures/bundles/example-foo/foo.popo.yml
@@ -14,6 +14,7 @@ Example:
 
 AnotherExample:
   $:
+    comment: Another example lorem ipsum
     default:
       idForAnotherExample: 200 # default is 100 because property value overrides shared values
     property: [
