--- a/composer.json
+++ b/composer.json
@@ -43,11 +43,17 @@
     "test": [
       "vendor/bin/phpunit --no-coverage --testdox --testsuite functional,unit"
     ],
+    "report": [
+      "bin/popo report -s tests/fixtures/popo.yml",
+      "bin/popo report -s tests/fixtures/popo-namespace-root.yml",
+      "bin/popo report -s tests/fixtures/popo-readme.yml",
+      "bin/popo report -c tests/fixtures/bundles/project.config.yml -s tests/fixtures/bundles/"
+    ],
     "popo": [
       "bin/popo generate -q -s tests/fixtures/popo.yml",
       "bin/popo generate -q -s tests/fixtures/popo-namespace-root.yml",
       "bin/popo generate -q -s tests/fixtures/popo-readme.yml",
-      "bin/popo generate -q -c tests/fixtures/bundles/shared.config.yml -s tests/fixtures/bundles/"
+      "bin/popo generate -q -c tests/fixtures/bundles/project.config.yml -s tests/fixtures/bundles/"
     ],
     "test-c": [
       "vendor/bin/phpunit --testdox --testsuite functional,unit"
