--- a/tests/fixtures/popo-namespace-root.yml
+++ b/tests/fixtures/popo-namespace-root.yml
@@ -1,7 +1,7 @@
 $:
   config:
     namespace: ExampleBundle\AppWithNamespaceRoot\Example
-    namespaceRoot: ExampleBundle\
+    namespaceRoot: ExampleBundle
     outputPath: tests/
 
 Example:
