--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,20 +13,20 @@
             <html outputDirectory="./tests/logs/coverage"/>
         </report>
     </coverage>
+    <logging>
+        <testdoxHtml outputFile="./tests/logs/coverage/index.html"/>
+    </logging>
     <groups>
         <exclude>
             <group>skip</group>
         </exclude>
     </groups>
     <testsuites>
-        <testsuite name="functional">
-            <directory>./tests/suite/Functional</directory>
+        <testsuite name="AppTestSuite">
+            <directory>./tests/suite/App</directory>
         </testsuite>
-        <testsuite name="unit">
-            <directory>./tests/suite/Unit</directory>
+        <testsuite name="PopoTestSuite">
+            <directory>./tests/suite/Popo</directory>
         </testsuite>
     </testsuites>
-    <logging>
-        <testdoxHtml outputFile="./tests/logs/coverage/index.html"/>
-    </logging>
 </phpunit>
