--- a/tests/fixtures/popo-inheritance.yml
+++ b/tests/fixtures/popo-inheritance.yml
@@ -1,6 +1,6 @@
 $:
   config:
-    namespace: App\Example\Invalid
+    namespace: App\Example\Inheritance
     outputPath: tests/
   property: [
     {name: idForAll, type: int, default: 1, comment: This id is for all}
@@ -9,12 +9,12 @@ $:
 Example:
   $:
     property: [
-      {name: idForAll, type: int, default: 2, comment: This id is for all}
+      {name: idForAll, type: int, default: 2, comment: This id is for Example schema only}
       {name: description}
     ]
 
   FooBar:
     property: [
-      {name: idForAll, type: int, default: 3, comment: This id is for all}
+      {name: idForAll, type: int, default: 3, comment: This id is for FooBar only}
       {name: description}
     ]}}
