--- a/tests/fixtures/bundles/example-foo/foo.popo.yml
+++ b/tests/fixtures/bundles/example-foo/foo.popo.yml
@@ -9,7 +9,7 @@ Example:
       {name: title}
       {name: value, type: int, default: \App\ExampleInterface::TEST_BUZZ}
       {name: bar, type: popo}
-      {name: test, type: mixed}
+      {name: test}
     ]}}
 
 AnotherExample:
