--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": "~7.4",
+    "php": "^7.4|^8",
     "ext-ctype": "*",
     "symfony/finder": "^5",
     "symfony/console": "^5",
