--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
   "require": {
     "php": "^7.4|^8",
     "ext-ctype": "*",
-    "symfony/finder": "^5",
-    "symfony/console": "^5",
-    "symfony/yaml": "^5",
+    "symfony/finder": "^5|^6",
+    "symfony/console": "^5|^6",
+    "symfony/yaml": "^5|^6",
     "nette/php-generator": "^3"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
-    "symfony/var-dumper": "^5"
+    "symfony/var-dumper": "^5|^6"
   },
   "autoload": {
     "psr-4": {
