property value for boolean properties without default value will be set to false instead of null

--- a/tests/fixtures/popo.yml
+++ b/tests/fixtures/popo.yml
@@ -34,7 +34,8 @@ Example:
       {name: title}
       {name: value, type: int, default: \App\ExampleInterface::TEST_BUZZ}
       {name: bar, type: popo}
-      {name: test}
+      {name: isTest, type: bool, default: true}
+      {name: isTestWithoutDefault, type: bool}
     ]}}
 
   Bar:
