fixed issue with datetime type and timezone setting

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
       "vendor/bin/phpunit --no-coverage --testdox --group unit,functional"
     ],
     "test-c": [
-      "vendor/bin/phpunit --testdox --group unit,functional"
+      "XDEBUG_MODE=coverage vendor/bin/phpunit --testdox --group unit,functional"
     ],
     "report": [
       "bin/popo report -s tests/popo.yml",
